# SolaSola

./: .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE.md  Readme.md  SECURITY.md  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: docker-publish.yml  docker-scan.yml
solasola/: abc_generator.py  app.py  audio_mixer.py  cache_resolver.py  hardware_manager.py  healthcheck.py  input_handler.py  installation_manager.py  metadata_generator.py  midi_converter.py  midi_mixer.py  model_manager.py  processing_logic.py  requirements-basic-pitch.txt  results_manager.py  song_analyzer.py  srt_parser.py  sse_manager.py  stem_separator.py  stem_separator_progress_checker.py  task_manager.py  ui_log_manager.py  utils.py  version.json  xet_manager.py
solasola/static/css/: base.css  components.css  forms.css  library.css  model_manager.css  results.css
solasola/static/js/: constants.js  form-handler.js  library.js  main.js  model_manager.js  processing.js  results.js  sse_client.js  ui-helpers.js
solasola/sub_process/: demucs_download_watcher.py  demucs_state_watcher.py  global_model_state_watcher.py  install_model.py  run_basic_pitch.py  run_genre_classifier.py
solasola/templates/: index.html  library.html  licenses.html  model_manager.html  offline.html  processing.html
tests/: test_app.py
