[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "solasola"
version = "0.1.0"
description = "A user-friendly tool to convert songs (MP3, WAV, MID) into ABC notation. Supports regular music and AI tracks from Suno/Udio. Easy to use with Docker."
packages = [{include = "solasola"}]
authors = ["castika <castika@castika.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "~3.11"
flask = ">=3.1.2,<4.0.0"
pyyaml = ">=6.0.2,<7.0.0"
chardet = ">=5.2.0,<6.0.0"
pydub = ">=0.25.1,<0.26.0"
eyed3 = ">=0.9.7,<0.10.0"
mido = ">=1.3.2,<2.0.0"
demucs = {version = ">=4.0.1,<5.0.0", extras = ["split_alpha"]}
music21 = ">=9.7.1,<10.0.0"
transformers = ">=4.36.0"
librosa = ">=0.10.0"
soundfile = ">=0.12.1"
setuptools = ">=78.1.1"
scikit-learn = "==1.5.1"

[tool.poetry.group.dev.dependencies]
flake8 = ">=7.0.0"
pytest = ">=8.0.0"